# rest-e2e-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
resources/examples/: github-api.yaml  minimal.yaml
resources/guides/: assertions.md  getting-started.md  variables.md  yaml-format.md
resources/spec/: testsuite.schema.yaml
src/: lib.rs  main.rs  types.rs
src/assert/: checker.rs  mod.rs
src/http/: client.rs  mod.rs
src/mcp/: mod.rs  resources.rs  server.rs
src/parser/: mod.rs  suite.rs
src/report/: default.md.j2  engine.rs  mod.rs
src/variable/: mod.rs  resolver.rs
