[package]
name = "rest-e2e-mcp"
version = "0.2.0"
edition = "2024"
description = "MCP server for AI-driven REST API end-to-end testing — use-case oriented, safe, efficient"
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura"]
repository = "https://github.com/ynishi/rest-e2e-mcp"
homepage = "https://github.com/ynishi/rest-e2e-mcp"
documentation = "https://docs.rs/rest-e2e-mcp"
keywords = ["mcp", "rest-api", "e2e-testing", "ai", "test-automation"]
categories = ["development-tools::testing", "command-line-utilities"]
readme = "README.md"
rust-version = "1.85"
include = [
    "src/**/*.rs",
    "src/**/*.j2",
    "resources/guides/*.md",
    "resources/spec/*.yaml",
    "resources/examples/*.yaml",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io", "macros"] }
schemars = "1.2"
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
encoding_rs = "0.8"
dotenvy = "0.15"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
proptest = "1"
tempfile = "3"
